Update internals & infrastructure